--- a/index.html
+++ b/index.html
@@ -3,12 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Yeseva+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/949d6137fe.js" crossorigin="anonymous"></script>
     <title>Annexes</title>
 </head>
 <body>
+    <h1>SOLÈNE AVRIL
+        <font color="#00d39d">.</font>
+        <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+        <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+        <i class="fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i>
+    </h1>
     
+    <h2>
+        Hello, <BR>
+        Je suis photographe d'art, <BR>
+        <font color="#00d39d">créative & engagée</font>
+        
+
+
+    </h2>
+
+    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis nisi enim, hendrerit <BR> 
+        sed odio vel, dictum cursus ante. Praesent quis nulla condimentum, hendrerit lectus eget, <BR> 
+        vehicula nisl. Phasellus ex ligula, congue vitae augue id, dapibus convallis leo. Aenean <BR>
+        mattis libero augue, non vulputate justo imperdiet eget. Nunc sit amet vehicula.</h3>
+
+    <h4>
+
+
+    </h4>
 
 
 
