--- a/index.html
+++ b/index.html
@@ -13,14 +13,30 @@
     <script src="https://kit.fontawesome.com/949d6137fe.js" crossorigin="anonymous"></script>
     <title>Annexes</title>
 </head>
+<div>
+<main>
+<header>
+
+    
+    <h1>SOLÈNE AVRIL<font color="#00d39d">.</font></h1>
+
+<nav>
+    <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
+    <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
+    <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+    <i class="fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i>
+</nav>
+
+</div>
+
+
+
+
+</header>
+
+
 <body>
-    <h1>SOLÈNE AVRIL
-        <font color="#00d39d">.</font>
-        <i class="fa-brands fa-facebook" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
-        <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
-        <i class="fa-solid fa-circle-half-stroke" style="color: #ffffff;"></i>
-    </h1>
+
     
     <h2>
         Hello, <BR>
@@ -37,17 +53,39 @@
         mattis libero augue, non vulputate justo imperdiet eget. Nunc sit amet vehicula.</h3>
 
     <h4>
-
-
+        <a href="">Nature</a>
+        <a href="">Portrait</a>
+        <a href="">Art</a>
+        <a href="">Urbain</a>
+        <a href="">Animaux</a>
     </h4>
 
-
-
-
-
-
-
-
-
 </body>
+
+
+    <h5>
+        <div class="parent">
+            <div class="div1"><img src="https://picsum.photos/200?random=1"></div>
+            <div class="div2"><img src="https://picsum.photos/200?random=2"></div>
+            <div class="div3"><img src="https://picsum.photos/200?random=3"></div>
+            <div class="div4"> <img src="https://picsum.photos/200?random=4"></div>
+            <div class="div5"> <img src="https://picsum.photos/200?random=5"></div>
+            <div class="div6"> <img src="https://picsum.photos/200?random=6"></div>
+            <div class="div7"> <img src="https://picsum.photos/200?random=7"></div>
+            <div class="div8"> <img src="https://picsum.photos/200?random=8"></div>
+            <div class="div9"> <img src="https://picsum.photos/200?random=9"></div>
+            <div class="div10"> <img src="https://picsum.photos/200?random=10"></div>
+            <div class="div11"> <img src="https://picsum.photos/200?random=11"></div>
+            <div class="div12"> <img src="https://picsum.photos/200?random=12"></div>
+            <div class="div13"> <img src="https://picsum.photos/200?random=13"></div>
+            <div class="div14"> <img src="https://picsum.photos/200?random=14"></div>
+            <div class="div15"> <img src="https://picsum.photos/200?random=15"></div>
+            <div class="div16"> <img src="https://picsum.photos/200?random=16"></div>
+            </div>
+    </h5>
+
+
+
+
+</main>
 </html>
