--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <main>
 <header>
 
-    <h1>SOLÈNE AVRIL<font color="#00d39d">.</font></h1>
+    <h1>SOLÈNE AVRIL.</h1>
 
 <nav>
 
@@ -29,10 +29,6 @@
 
 
 </header>
-
-
-<body>
-
     
     <h2>
         Hello, <BR>Je suis photographe d'art,<BR>créative & engagée.
@@ -50,7 +46,6 @@
         <button>ANIMAUX</button>
     </h4>
 
-</body>
 
 
         <div class="grid">
