--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
@@ -66,8 +66,10 @@
             <img src="https://picsum.photos/200?random=15" alt="Image 15">
         </div>
 
-
-
+<footer>
+    2024 SOLÈNE AVRIL<br>
+    <p>Exercice HTML-CSS</p>
+</footer>
 
 </main>
 </html>
